# omniauto

./: .gitignore  AGENTS.md  PROJECT_STRUCTURE.md  README.md  START_HERE.md  agents.md  development.md  main.py  pyproject.toml  requirements.md
apps/codex_wechat_bridge/: README.md  __init__.py
apps/marketplace_1688_research/: README.md
apps/minesweeper_autoplay/: README.md
apps/wechat_ai_customer_service/: README.md  __init__.py  knowledge_paths.py  llm_config.py  platform_safety_rules.py  platform_understanding_rules.py
data/logs/: auto_test_summary.json  diagnostic_log.txt
docs/: AI_AGENT_INTEGRATION.md  AUTOMATIC_KNOWLEDGE_GROWTH_BLUEPRINT.md  CAPABILITIES_AND_WORKFLOW.md  COMPLEX_TASK_APP_STRUCTURE_STANDARD.md  GUARDED_KNOWLEDGE_CLOSEOUT.md  KNOWLEDGE_WORKFLOW.md  OPTIMIZATION_REPORT.md  TASK_APPS_PROMOTION_IMPLEMENTATION_GUIDE.md  TASK_APPS_PROMOTION_OPTIMIZATION_GUIDE.md  TEST_REPORT.md  USER_GUIDE_AI_MODE.md  USER_READABLE_PROJECT_STRUCTURE_OVERVIEW.md  WECHAT_AI_CUSTOMER_SERVICE_IMPLEMENTATION_GUIDE.md  WECHAT_AI_CUSTOMER_SERVICE_OPTIMIZATION_GUIDE.md  WECHAT_CUSTOMER_SERVICE_DEBUG_LESSONS_AND_ROADMAP.md  WECHAT_CUSTOMER_SERVICE_ENVIRONMENT_REQUIREMENTS.md  WECHAT_CUSTOMER_SERVICE_FINAL_BASELINE.md  WECHAT_CUSTOMER_SERVICE_RPA_SPEC.md  agents.md  development.md  low_disturbance_risk_flow.md  recovery_architecture.md  微信智能客服二手车长测材料_V2.md
knowledge/: README.md
knowledge/_templates/: README.md  capability_template.md  lesson_template.md  pattern_template.md  task_record_template.md
knowledge/capabilities/: README.md
knowledge/index/: README.md  ai_candidate_queue.md  capability_matrix.md  knowledge_registry.json  lesson_index.md  pattern_index.md  promotion_queue.md  proposal_queue.md  task_catalog.md
knowledge/lessons/: README.md
knowledge/patterns/: README.md
knowledge/proposals/: README.md
knowledge/review/: README.md
knowledge/tasks/: README.md
outputs/: baidu_weather_20260413_114511.xlsx  douban_top5_20260413_115324.xlsx  hn_report_20260413_114723.docx  hn_titles_20260413_114654.xlsx  sales_report_20260413_115146.xlsx
platform/: README.md
platform/docs/: AI_AGENT_INTEGRATION.md  CAPABILITIES_AND_WORKFLOW.md  agents.md  development.md  recovery_authoring.md
platform/tests/: README.md
platform/tools/: README.md
runtime/: README.md
runtime/test_artifacts/: README.md
scripts/: README.md  agent_打开Chrome浏览器_访问Google_搜索kimi.py  agent_查看当前有哪些定时任务.py  example_baidu_search.py  manual_google_kimi.py  scenario_hn_to_excel.py  scenario_multi_screenshot.py  scenario_notepad_automation.py  test_1688.py  test_baidu.py
scripts/archive/: agent_访问_Hacker_News_抓取前5条标题保存成Excel.py
scripts/examples/: example_httpbin_form.py  manual_baidu_kimi.py  scenario_douban_movies.py
skills/: OMNIAUTO_SKILL_UPGRADE_GUIDE.md  README.md  SKILL_CATALOG.md  UPGRADE_POLICY.md
skills/capability_skills/: README.md
skills/deterministic-rpa-workflow/: README.md
skills/task_skills/: README.md
src/omniauto/: __init__.py  agent_runtime.py  api.py  cli.py  service.py
test_artifacts/: README.md
tests/: README.md
workflows/: README.md
(+3148 files in other folders)
