[project]
name = "omniauto"
version = "0.1.0"
description = "通用AI自动化框架，影刀RPA的开源替代方案"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.12.6",
    "click>=8.3.1",
    "opencv-python>=4.13.0.92",
    "playwright>=1.58.0",
    "prefect>=3.6.26",
    "pyauto-desktop>=0.5.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "smolagents>=1.24.0",
    "structlog>=25.5.0",
]

[project.scripts]
omni = "omniauto.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniauto"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
