[project]
name = "omniauto"
version = "0.1.0"
description = "通用AI自动化框架，影刀RPA的开源替代方案"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "browser-use>=0.12.6",
    "click>=8.3.1",
    "fastapi>=0.115.0",
    "mcp>=1.6.0",
    "opencv-python>=4.13.0.92",
    "playwright>=1.58.0",
    "prefect>=3.6.26",
    "pyauto-desktop>=0.5.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.20",
    "smolagents>=1.24.0",
    "structlog>=25.5.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
omni = "omniauto.cli:cli"
omni-mcp = "omniauto.mcp_server:main"
omni-api = "omniauto.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniauto"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=test_artifacts/pytest-tmp"
cache_dir = "test_artifacts/.pytest_cache"
